# streamio

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
backend/: pyproject.toml
backend/auth/.devcontainer/: devcontainer.json
backend/auth/app/: main.py
backend/auth/app/routers/: oauth.py
backend/infra/: pyproject.toml
backend/infra/.devcontainer/: Dockerfile
backend/security/: pyproject.toml
backend/security/.devcontainer/: Dockerfile  devcontainer.json
backend/security/app/: main.py
backend/security/app/routers/: oauth.py
backend/security/app/routers/v1/: oauth.py
backend/security/app/services/: access_token.py
backend/security/tests/: test_main.py
projects/auth/: pyproject.toml
projects/auth/.devcontainer/: devcontainer.json
projects/infra/.devcontainer/: devcontainer.json
shared/domains/: pyproject.toml
shared/domains/.devcontainer/: Dockerfile  devcontainer.json
shared/domains/domains/: user.py
