[tool.poetry]
name = "monorepo"
version = "0.1.0"
description = "monorepo management configuration"
authors = ["Andres Rengifo <amrengifoh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mypi = "^0.0.3"
black = "^23.10.1"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
